<resources>
    <string name="app_name">CryptoScalpingApp</string>
    <string name="edit_transaction_item_settings_description">Settings</string>
    <string name="add_transaction_item_description">Add</string>
    <string name="wallet_name">Name:</string>
    <string name="wallet_address">Address:</string>
    <string name="add_address_to_list">Save</string>
    <string name="error_input_address">Invalid address</string>
    <string name="invalid_input_name">Max 10 symbols</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tv_transaction_hash">Transaction Hash</string>
    <string name="tv_timestamp">Timestamp</string>
    <string name="tv_from_address">From Address</string>
    <string name="to_address">To Address</string>
    <string name="tv_value">Value</string>
    <string name="token_symbol">Token Symbol</string>
    <string name="token_name">Token Name</string>
    <string name="main_settings_title">Основные настройки</string>

</resources>