<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:padding="12dp">

        <!-- Символ токена -->
        <TextView
            android:id="@+id/tv_token_symbol"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/token_background"
            android:gravity="center"
            android:text="@string/token_symbol"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Название токена -->
        <TextView
            android:id="@+id/tv_token_name_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/token_name"
            android:textColor="@color/textSecondary"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@id/tv_token_symbol"
            app:layout_constraintEnd_toStartOf="@+id/tv_timeStamp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_token_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/token_name"
            android:textColor="@color/textPrimary"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tv_token_name_title"
            app:layout_constraintTop_toBottomOf="@id/tv_token_name_title"
            app:layout_constraintEnd_toEndOf="@id/tv_token_name_title" />

        <!-- Время транзакции -->
        <TextView
            android:id="@+id/tv_timeStamp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_timestamp"
            android:textColor="@color/textSecondary"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_timeStamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_timestamp"
            android:textColor="@color/textSecondary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/tv_timeStamp_title"
            app:layout_constraintTop_toBottomOf="@id/tv_timeStamp_title" />

        <!-- Хеш транзакции -->
        <TextView
            android:id="@+id/tv_transaction_hash_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_transaction_hash"
            android:textColor="@color/textSecondary"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@id/tv_token_name"
            app:layout_constraintTop_toBottomOf="@id/tv_token_name" />

        <TextView
            android:id="@+id/tv_transaction_hash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_transaction_hash"
            android:textColor="@color/textSecondary"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_transaction_hash_title"
            app:layout_constraintTop_toBottomOf="@id/tv_transaction_hash_title"
            app:layout_constraintEnd_toEndOf="@id/tv_transaction_hash_title" />

        <!-- Отправитель -->
        <TextView
            android:id="@+id/tv_fromAddress_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_from_address"
            android:textColor="@color/textSecondary"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@id/tv_token_name"
            app:layout_constraintTop_toBottomOf="@id/tv_transaction_hash" />

        <TextView
            android:id="@+id/tv_fromAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_from_address"
            android:textColor="@color/textPrimary"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_fromAddress_title"
            app:layout_constraintTop_toBottomOf="@id/tv_fromAddress_title" />

        <!-- Получатель -->
        <TextView
            android:id="@+id/tv_toAddress_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_address"
            android:textColor="@color/textSecondary"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_toAddress"/>

        <TextView
            android:id="@+id/tv_toAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_address"
            android:textColor="@color/textPrimary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/tv_toAddress_title"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- Сумма транзакции -->
        <TextView
            android:id="@+id/tv_value_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_value"
            android:textColor="@color/textSecondary"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_timeStamp" />

        <TextView
            android:id="@+id/tv_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_value"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_value_title"
            app:layout_constraintTop_toBottomOf="@id/tv_value_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>