<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wallet_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.wallet.WalletItemFragment"
    android:background="@drawable/main_background_gradient" >


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_wallet_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/til_wallet_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_wallet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wallet_name"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_wallet_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_wallet_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_wallet_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wallet_address" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save_wallet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add_address_to_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>